--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ obj/Debug/ReplaceTool.exe
 obj/Debug/ReplaceTool.pdb
 obj/Debug/ReplaceTool.Properties.Resources.resources
 obj/Debug/ReplaceTool.ReplaceToolForm.resources
+.vs/ReplaceTool/FileContentIndex/1f4aa9aa-adce-41ee-8da1-9961de38edd5.vsidx
