--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ obj/Debug/ReplaceTool.pdb
 obj/Debug/ReplaceTool.Properties.Resources.resources
 obj/Debug/ReplaceTool.ReplaceToolForm.resources
 .vs/ReplaceTool/FileContentIndex/1f4aa9aa-adce-41ee-8da1-9961de38edd5.vsidx
+.vs/ReplaceTool/FileContentIndex/96d32079-a6a9-4715-814d-48e3b832c883.vsidx
