--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ obj/Debug/ReplaceTool.Properties.Resources.resources
 obj/Debug/ReplaceTool.ReplaceToolForm.resources
 .vs/ReplaceTool/FileContentIndex/1f4aa9aa-adce-41ee-8da1-9961de38edd5.vsidx
 .vs/ReplaceTool/FileContentIndex/96d32079-a6a9-4715-814d-48e3b832c883.vsidx
+.vs/ReplaceTool/FileContentIndex/0de92025-cf4c-4d5d-8ffe-82cf46668e61.vsidx
+.vs/ReplaceTool/FileContentIndex/dacd56e4-4b0d-4c0d-a1e7-9c32df5200ed.vsidx
+obj/Debug/.NETFramework,Version=v4.5.AssemblyAttributes.cs
+obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+bin/Debug/ReplaceTool.exe.config
+app.config
