--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ obj/Debug/.NETFramework,Version=v4.5.AssemblyAttributes.cs
 obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
 bin/Debug/ReplaceTool.exe.config
 app.config
+.vs/ReplaceTool/FileContentIndex/d80f0cc9-7fc3-43d3-8c04-7363fd3a26d9.vsidx
